# lzw-compression

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: CMakeLists.txt
src/: CMakeLists.txt
src/archiving/: ArchiveItem.cpp  ArchiveItem.hpp  CMakeLists.txt  FileSystem.hpp
src/common_data_structures/: CMakeLists.txt  Set.hpp  SetFactory.cpp  SetFactory.hpp  Sortable.hpp  unused.cpp
src/common_data_structures/implementations/: BTreeNode.hpp  RBNode.hpp  RBNodeIterator.hpp  RBNodeOperations.hpp  RBTree.hpp  StdSetWrapper.hpp
src/compression/: CMakeLists.txt  Compressor.hpp  CompressorFactory.cpp  CompressorFactory.hpp  Decompressor.hpp  DecompressorFactory.cpp  DecompressorFactory.hpp
src/compression/implementations/: LZWCompressor.cpp  LZWCompressor.hpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  main.cpp
test/: CMakeLists.txt
test/archiving/: ArchiveItemTests.cpp  CMakeLists.txt
test/common_data_structures/: BTreeNodeTests.cpp  CMakeLists.txt  RBNodeIteratorTests.cpp  RBNodeOperationsTests.cpp  RBNodeTests.cpp  RBTreeTests.cpp  SampleBTree.hpp  SampleRBTree.hpp  SetFactoryTests.cpp  StdSetWrapperTests.cpp
test/compression/: CMakeLists.txt  LZWCompressorTests.cpp
